Accessibility fixes: contrast + close button label.

--- a/iXBRLViewerPlugin/viewer/src/less/colours.less
+++ b/iXBRLViewerPlugin/viewer/src/less/colours.less
@@ -28,8 +28,8 @@
 
 @colour-icon-grey: @colour-text;
 
-@colour-button-primary-bg: @colour-primary-focus;
-@colour-button-primary-border: lighten(saturate(spin(@colour-primary, -3.2251), 1.9231), 4.3137); // #0085e6;
+@colour-button-primary-bg: darken(@colour-primary-focus, 20);
+@colour-button-primary-border: darken(@colour-button-primary-bg, 10);
 
 @colour-button-bg: darken(@colour-bg, 2.7451); // #f8f8f8;
 @colour-bg-selected: darken(@colour-bg, 4.7059); // #f3f3f3;
